Cant goes to calculate page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,13 @@
     <string name="minus_sign">-</string>
 
     <string name="calculate_button">CALCULATE</string>
+    
+    <string name="bmi_label">YOUR BODY MASS INDEX (BMI)</string>
+    <string name="bmi_starter_value">0</string>
+    <string name="status_label">YOUR WEIGHT STATUS</string>
+    <string name="status_starter_value">Healthy!</string>
+    <string name="gender_label">YOUR GENDER</string>
+    <string name="height_label">HEIGHT: </string>
+    <string name="age_label">AGE</string>
+    <string name="another_calculation_button">CALCULATE AGAIN</string>
 </resources>
